--- a/app/views/dashboard/agency_admin.html.erb
+++ b/app/views/dashboard/agency_admin.html.erb
@@ -24,81 +24,247 @@
 
 <div>
   <%= render partial: "shared/sidenav" %>
-  <div class="flex flex-1 flex-col md:pl-64">
-    <main class="flex-1">
-      <div class="py-6">
-        <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-8">
-          <h3 class="text-2xl font-semibold text-gray-900">I am the AGENCY ADMIN dashboard.</h3>
+  <div class="min-h-full">
+    <!-- Off-canvas menu for mobile, show/hide based on off-canvas menu state. -->
+    <div class="relative z-40 lg:hidden" role="dialog" aria-modal="true">
+      <!--
+        Off-canvas menu backdrop, show/hide based on off-canvas menu state.
+
+        Entering: "transition-opacity ease-linear duration-300"
+          From: "opacity-0"
+          To: "opacity-100"
+        Leaving: "transition-opacity ease-linear duration-300"
+          From: "opacity-100"
+          To: "opacity-0"
+      -->
+      <div class="fixed inset-0 bg-gray-600 bg-opacity-75"></div>
+
+      <div class="fixed inset-0 z-40 flex">
+        <!--
+          Off-canvas menu, show/hide based on off-canvas menu state.
+
+          Entering: "transition ease-in-out duration-300 transform"
+            From: "-translate-x-full"
+            To: "translate-x-0"
+          Leaving: "transition ease-in-out duration-300 transform"
+            From: "translate-x-0"
+            To: "-translate-x-full"
+        -->
+        
+
+        <div class="w-14 flex-shrink-0" aria-hidden="true">
+          <!-- Dummy element to force sidebar to shrink to fit close icon -->
         </div>
-        <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-8">
-          <!-- Replace with your content -->
-          <div class="py-4">
-            <div class="h-96 rounded-lg border-4 border-dashed border-gray-200">
-              <div class="px-4 sm:px-6 lg:px-8">
-                <div class="sm:flex sm:items-center">
-                  <div class="sm:flex-auto">
-                    <h1 class="text-xl font-semibold text-gray-900">Sites</h1>
-                    <p class="mt-2 text-sm text-gray-700">A list of Sites.</p>
-                  </div>
-                  <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
-                    <button type="button" class="inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-500 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">Add appointment</button>
+      </div>
+    </div>
+
+    <!-- Static sidebar for desktop -->
+    <div class="hidden lg:fixed lg:inset-y-0 lg:flex lg:w-64 lg:flex-col">
+      <!-- Sidebar component, swap this element with another sidebar if you like -->
+
+    </div>
+
+    <div class="flex flex-1 flex-col lg:pl-64">
+
+      <main class="flex-1 pb-8">
+        <!-- Page header -->
+
+        <div class="mt-8">
+          <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
+            <h2 class="text-lg font-medium leading-6 text-gray-900">Overview</h2>
+            <div class="mt-2 grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3">
+              <!-- Card -->
+
+              <div class="overflow-hidden rounded-lg bg-white shadow">
+                <div class="p-5">
+                  <div class="flex items-center">
+                    <div class="flex-shrink-0">
+                      <!-- Heroicon name: outline/scale -->
+                      <svg class="h-6 w-6 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v17.25m0 0c-1.472 0-2.882.265-4.185.75M12 20.25c1.472 0 2.882.265 4.185.75M18.75 4.97A48.416 48.416 0 0012 4.5c-2.291 0-4.545.16-6.75.47m13.5 0c1.01.143 2.01.317 3 .52m-3-.52l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.988 5.988 0 01-2.031.352 5.988 5.988 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L18.75 4.971zm-16.5.52c.99-.203 1.99-.377 3-.52m0 0l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.989 5.989 0 01-2.031.352 5.989 5.989 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L5.25 4.971z" />
+                      </svg>
+                    </div>
+                    <div class="ml-5 w-0 flex-1">
+                      <dl>
+                        <dt class="truncate text-sm font-medium text-gray-500">Created Appointments</dt>
+                        <dd>
+                          <div class="text-lg font-medium text-gray-900">30</div>
+                        </dd>
+                      </dl>
+                    </div>
                   </div>
                 </div>
-                <div class="mt-8 flex flex-col">
-                  <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
-                    <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
-                      <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
-                        <table class="min-w-full divide-y divide-gray-300">
-                          <thead class="bg-gray-50">
-                            <tr>
-                              <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Name</th>
-                              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Title</th>
-                              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Status</th>
-                              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Role</th>
-                              <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
-                                <span class="sr-only">Edit</span>
-                              </th>
-                            </tr>
-                          </thead>
-                          <tbody class="divide-y divide-gray-200 bg-white">
-                            <tr>
-                              <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm sm:pl-6">
-                                <div class="flex items-center">
-                                  <div class="h-10 w-10 flex-shrink-0">
-                                    <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-                                  </div>
-                                  <div class="ml-4">
-                                    <div class="font-medium text-gray-900">Lindsay Walton</div>
-                                    <div class="text-gray-500">lindsay.walton@example.com</div>
-                                  </div>
-                                </div>
-                              </td>
-                              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
-                                <div class="text-gray-900">Intepreter</div>
-                              </td>
-                              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
-                                <span class="inline-flex rounded-full bg-green-100 px-2 text-xs font-semibold leading-5 text-green-800">Active</span>
-                              </td>
-                              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Member</td>
-                              <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                                <a href="#" class="text-indigo-600 hover:text-indigo-900">Edit<span class="sr-only">, Lindsay Walton</span></a>
-                              </td>
-                            </tr>
+                <div class="bg-gray-50 px-5 py-3">
+                  <div class="text-sm">
+                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                  </div>
+                </div>
+              </div>
+              <!-- Card -->
 
-                            <!-- More people... -->
-                          </tbody>
-                        </table>
-                      </div>
+              <div class="overflow-hidden rounded-lg bg-white shadow">
+                <div class="p-5">
+                  <div class="flex items-center">
+                    <div class="flex-shrink-0">
+                      <!-- Heroicon name: outline/scale -->
+                      <svg class="h-6 w-6 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v17.25m0 0c-1.472 0-2.882.265-4.185.75M12 20.25c1.472 0 2.882.265 4.185.75M18.75 4.97A48.416 48.416 0 0012 4.5c-2.291 0-4.545.16-6.75.47m13.5 0c1.01.143 2.01.317 3 .52m-3-.52l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.988 5.988 0 01-2.031.352 5.988 5.988 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L18.75 4.971zm-16.5.52c.99-.203 1.99-.377 3-.52m0 0l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.989 5.989 0 01-2.031.352 5.989 5.989 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L5.25 4.971z" />
+                      </svg>
                     </div>
+                    <div class="ml-5 w-0 flex-1">
+                      <dl>
+                        <dt class="truncate text-sm font-medium text-gray-500">Appointments Scheduled</dt>
+                        <dd>
+                          <div class="text-lg font-medium text-gray-900">20</div>
+                        </dd>
+                      </dl>
+                    </div>
+                  </div>
+                </div>
+                <div class="bg-gray-50 px-5 py-3">
+                  <div class="text-sm">
+                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                  </div>
+                </div>
+              </div>
+              <!-- Card -->
+
+              <div class="overflow-hidden rounded-lg bg-white shadow">
+                <div class="p-5">
+                  <div class="flex items-center">
+                    <div class="flex-shrink-0">
+                      <!-- Heroicon name: outline/scale -->
+                      <svg class="h-6 w-6 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v17.25m0 0c-1.472 0-2.882.265-4.185.75M12 20.25c1.472 0 2.882.265 4.185.75M18.75 4.97A48.416 48.416 0 0012 4.5c-2.291 0-4.545.16-6.75.47m13.5 0c1.01.143 2.01.317 3 .52m-3-.52l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.988 5.988 0 01-2.031.352 5.988 5.988 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L18.75 4.971zm-16.5.52c.99-.203 1.99-.377 3-.52m0 0l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.989 5.989 0 01-2.031.352 5.989 5.989 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L5.25 4.971z" />
+                      </svg>
+                    </div>
+                    <div class="ml-5 w-0 flex-1">
+                      <dl>
+                        <dt class="truncate text-sm font-medium text-gray-500">Appointments Completed</dt>
+                        <dd>
+                          <div class="text-lg font-medium text-gray-900">30</div>
+                        </dd>
+                      </dl>
+                    </div>
+                  </div>
+                </div>
+                <div class="bg-gray-50 px-5 py-3">
+                  <div class="text-sm">
+                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
                   </div>
                 </div>
               </div>
 
+              <!-- More items... -->
             </div>
           </div>
-          <!-- /End replace -->
+
+          <h2 class="mx-auto mt-8 max-w-6xl px-4 text-lg font-medium leading-6 text-gray-900 sm:px-6 lg:px-8">Recent Apointments</h2>
+
+          <!-- Activity list (smallest breakpoint only) -->
+          <div class="shadow sm:hidden">
+            <ul role="list" class="mt-2 divide-y divide-gray-200 overflow-hidden shadow sm:hidden">
+              <% current_account.appointments.each do |appoinment| %>
+                <li>
+                  <a href="#" class="block bg-white px-4 py-4 hover:bg-gray-50">
+                    <span class="flex items-center space-x-4">
+                      <span class="flex flex-1 space-x-2 truncate">
+                        <!-- Heroicon name: mini/banknotes -->
+                        <svg class="h-5 w-5 flex-shrink-0 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                          <path fill-rule="evenodd" d="M1 4a1 1 0 011-1h16a1 1 0 011 1v8a1 1 0 01-1 1H2a1 1 0 01-1-1V4zm12 4a3 3 0 11-6 0 3 3 0 016 0zM4 9a1 1 0 100-2 1 1 0 000 2zm13-1a1 1 0 11-2 0 1 1 0 012 0zM1.75 14.5a.75.75 0 000 1.5c4.417 0 8.693.603 12.749 1.73 1.111.309 2.251-.512 2.251-1.696v-.784a.75.75 0 00-1.5 0v.784a.272.272 0 01-.35.25A49.043 49.043 0 001.75 14.5z" clip-rule="evenodd" />
+                        </svg>
+                        <span class="flex flex-col truncate text-sm text-gray-500">
+                          <span class="truncate">Payment to Molly Sanders</span>
+                          <span><span class="font-medium text-gray-900">$20,000</span> USD</span>
+                          <time datetime="2020-07-11">July 11, 2020</time>
+                        </span>
+                      </span>
+                      <!-- Heroicon name: mini/chevron-right -->
+                      <svg class="h-5 w-5 flex-shrink-0 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
+                      </svg>
+                    </span>
+                  </a>
+                </li>
+              <% end %>
+
+              <!-- More transactions... -->
+            </ul>
+
+            <nav class="flex items-center justify-between border-t border-gray-200 bg-white px-4 py-3" aria-label="Pagination">
+              <div class="flex flex-1 justify-between">
+                <a href="#" class="relative inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:text-gray-500">Previous</a>
+                <a href="#" class="relative ml-3 inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:text-gray-500">Next</a>
+              </div>
+            </nav>
+          </div>
+
+          <!-- Activity table (small breakpoint and up) -->
+          <div class="hidden sm:block">
+            <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
+              <div class="mt-2 flex flex-col">
+                <div class="min-w-full overflow-hidden overflow-x-auto align-middle shadow sm:rounded-lg">
+                  <table class="min-w-full divide-y divide-gray-200">
+                    <thead>
+                      <tr>
+                        <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col">Transaction</th>
+                        <th class="bg-gray-50 px-6 py-3 text-right text-sm font-semibold text-gray-900" scope="col">Amount</th>
+                        <th class="hidden bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900 md:block" scope="col">Status</th>
+                        <th class="bg-gray-50 px-6 py-3 text-right text-sm font-semibold text-gray-900" scope="col">Date</th>
+                      </tr>
+                    </thead>
+                    <tbody class="divide-y divide-gray-200 bg-white">
+                      <tr class="bg-white">
+                        <td class="w-full max-w-0 whitespace-nowrap px-6 py-4 text-sm text-gray-900">
+                          <div class="flex">
+                            <a href="#" class="group inline-flex space-x-2 truncate text-sm">
+                              <!-- Heroicon name: mini/banknotes -->
+                              <svg class="h-5 w-5 flex-shrink-0 text-gray-400 group-hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M1 4a1 1 0 011-1h16a1 1 0 011 1v8a1 1 0 01-1 1H2a1 1 0 01-1-1V4zm12 4a3 3 0 11-6 0 3 3 0 016 0zM4 9a1 1 0 100-2 1 1 0 000 2zm13-1a1 1 0 11-2 0 1 1 0 012 0zM1.75 14.5a.75.75 0 000 1.5c4.417 0 8.693.603 12.749 1.73 1.111.309 2.251-.512 2.251-1.696v-.784a.75.75 0 00-1.5 0v.784a.272.272 0 01-.35.25A49.043 49.043 0 001.75 14.5z" clip-rule="evenodd" />
+                              </svg>
+                              <p class="truncate text-gray-500 group-hover:text-gray-900">Payment to Molly Sanders</p>
+                            </a>
+                          </div>
+                        </td>
+                        <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
+                          <span class="font-medium text-gray-900">$20,000</span>
+                          USD
+                        </td>
+                        <td class="hidden whitespace-nowrap px-6 py-4 text-sm text-gray-500 md:block">
+                          <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800 capitalize">success</span>
+                        </td>
+                        <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
+                          <time datetime="2020-07-11">July 11, 2020</time>
+                        </td>
+                      </tr>
+
+                      <!-- More transactions... -->
+                    </tbody>
+                  </table>
+                  <!-- Pagination -->
+                  <nav class="flex items-center justify-between border-t border-gray-200 bg-white px-4 py-3 sm:px-6" aria-label="Pagination">
+                    <div class="hidden sm:block">
+                      <p class="text-sm text-gray-700">
+                        Showing
+                        <span class="font-medium">1</span>
+                        to
+                        <span class="font-medium">10</span>
+                        of
+                        <span class="font-medium">20</span>
+                        results
+                      </p>
+                    </div>
+                    <div class="flex flex-1 justify-between sm:justify-end">
+                      <a href="#" class="relative inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50">Previous</a>
+                      <a href="#" class="relative ml-3 inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50">Next</a>
+                    </div>
+                  </nav>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </main>
+      </main>
+    </div>
   </div>
 </div>
