--- a/app/views/agencies/_tokani_form.html.erb
+++ b/app/views/agencies/_tokani_form.html.erb
@@ -14,7 +14,33 @@
               <%= user_field.text_field :email, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
             </div>
           <% end %>
-          <%= fields_for(:agency, @agency) do |account_field| %>
+          <%= form.fields_for(:agency_detail, @agency_detail) do |agency_detail| %>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= agency_detail.label :primary_contact_first_name, class: "block text-sm font-medium text-gray-700" %>
+              <%= agency_detail.text_field :primary_contact_first_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= agency_detail.label :primary_contact_last_name, class: "block text-sm font-medium text-gray-700" %>
+              <%= agency_detail.text_field :primary_contact_last_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= agency_detail.label :primary_contact_email, class: "block text-sm font-medium text-gray-700" %>
+              <%= agency_detail.text_field :primary_contact_email, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= agency_detail.label :primary_contact_phone_number, class: "block text-sm font-medium text-gray-700" %>
+              <%= agency_detail.text_field :primary_contact_phone_number, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= agency_detail.label :primary_contact_title, class: "block text-sm font-medium text-gray-700" %>
+              <%= agency_detail.text_field :primary_contact_title, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= agency_detail.label :phone_number, class: "block text-sm font-medium text-gray-700" %>
+              <%= agency_detail.text_field :phone_number, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+          <% end %>
+          <%= form.fields_for(:agency, @agency) do |account_field| %>
             <div class="col-span-8 sm:col-span-6">
               <%= account_field.label :name, class: "block text-sm font-medium text-gray-700" %>
               <%= account_field.text_field :name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
